--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<li>tercer commit</li>
 		<li>cuarto commit</li>
 		<li>quinto commit</li>
+		<li>rama1 sexto commit</li>
 	</ol>
 </body>
 </html>
